--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+cycler==0.10.0
 Flask==1.1.2
 Flask-Cors==3.0.8
 google-api-core==1.21.0
@@ -17,13 +18,16 @@ httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lxml==4.5.2
 MarkupSafe==1.1.1
 numpy==1.18.5
 pandas==1.0.4
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyparsing==2.4.7
 python-dateutil==2.8.1
+pytrends==4.7.3
 pytz==2020.1
 requests==2.24.0
 rsa==4.6
