--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ google-auth==1.19.2
 google-auth-httplib2==0.0.4
 google-cloud-core==1.3.0
 google-cloud-datastore==1.13.2
+google-cloud-storage==1.30.0
+google-crc32c==0.1.0
+google-resumable-media==0.7.0
 googleapis-common-protos==1.52.0
 grpcio==1.30.0
 gunicorn==20.0.4
