--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 lxml==4.5.2
 MarkupSafe==1.1.1
+newsapi-python==0.2.6
 numpy==1.18.5
 pandas==1.0.4
 protobuf==3.12.2
