--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
+dominate==2.5.2
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.8
+flask-paginate==0.7.1
 google-api-core==1.21.0
 google-api-python-client==1.10.0
 google-auth==1.19.2
@@ -39,4 +42,5 @@ six==1.15.0
 SQLAlchemy==1.3.17
 uritemplate==3.0.1
 urllib3==1.25.9
+visitor==0.1.3
 Werkzeug==1.0.1
