--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 cachetools==4.1.1
 certifi==2020.6.20
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
 dominate==2.5.2
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
-Flask-Cors==3.0.8
+Flask-Cors==3.0.10
 flask-paginate==0.7.1
-google-api-core==1.21.0
+google-api-core==1.24.1
 google-api-python-client==1.10.0
-google-auth==1.19.2
+google-auth==1.24.0
 google-auth-httplib2==0.0.4
-google-cloud-core==1.3.0
-google-cloud-datastore==1.13.2
-google-cloud-storage==1.30.0
-google-crc32c==0.1.0
-google-resumable-media==0.7.0
+google-cloud-core==1.5.0
+google-cloud-datastore==2.1.0
+google-cloud-storage==1.35.0
+google-crc32c==1.1.0
+google-resumable-media==1.2.0
 googleapis-common-protos==1.52.0
 grpcio==1.30.0
 gunicorn==20.0.4
@@ -24,22 +25,29 @@ httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
-lxml==4.5.2
+libcst==0.3.16
+lxml==4.6.2
 MarkupSafe==1.1.1
+mypy-extensions==0.4.3
 newsapi-python==0.2.6
-numpy==1.18.5
-pandas==1.0.4
+numpy==1.19.5
+pandas==1.2.0
+proto-plus==1.13.0
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytrends==4.7.3
 pytz==2020.1
+PyYAML==5.3.1
 requests==2.24.0
 rsa==4.6
 six==1.15.0
-SQLAlchemy==1.3.17
+SQLAlchemy==1.3.22
+typing-extensions==3.7.4.3
+typing-inspect==0.6.0
 uritemplate==3.0.1
 urllib3==1.25.9
 visitor==0.1.3
