--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,56 @@
+appdirs==1.4.3
+boto==2.49.0
+boto3==1.14.32
+botocore==1.17.32
 cachetools==4.1.1
 certifi==2020.6.20
-cffi==1.14.4
+cffi==1.14.1
 chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
-dominate==2.5.2
+Cython==0.29.14
+distlib==0.3.1
+docutils==0.15.2
+filelock==3.0.12
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.10
-flask-paginate==0.7.1
-google-api-core==1.24.1
-google-api-python-client==1.10.0
-google-auth==1.24.0
-google-auth-httplib2==0.0.4
-google-cloud-core==1.5.0
-google-cloud-datastore==2.1.0
-google-cloud-storage==1.35.0
-google-crc32c==1.1.0
+gensim==3.8.3
+google-api-core==1.21.0
+google-auth==1.25.0
+google-cloud-core==1.6.0
+google-cloud-storage==1.35.1
+google-crc32c==1.1.2
 google-resumable-media==1.2.0
 googleapis-common-protos==1.52.0
 grpcio==1.30.0
-gunicorn==20.0.4
-httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
-libcst==0.3.16
-lxml==4.6.2
+jmespath==0.10.0
+joblib==0.16.0
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
-mypy-extensions==0.4.3
-newsapi-python==0.2.6
-numpy==1.19.5
-pandas==1.2.0
-proto-plus==1.13.0
+matplotlib==3.3.0
+numpy==1.20.1
+pandas==1.2.2
+Pillow==7.1.1
+pipenv==2020.6.2
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.1
-pytrends==4.7.3
 pytz==2020.1
-PyYAML==5.3.1
-requests==2.24.0
+requests==2.25.1
 rsa==4.6
-six==1.15.0
-SQLAlchemy==1.3.22
-typing-extensions==3.7.4.3
-typing-inspect==0.6.0
-uritemplate==3.0.1
-urllib3==1.25.9
-visitor==0.1.3
+s3transfer==0.3.3
+scikit-learn==0.24.1
+scipy==1.5.2
+six==1.14.0
+smart-open==2.1.0
+threadpoolctl==2.1.0
+urllib3==1.26.3
+virtualenv==20.4.2
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
